Automatically backed up by Learn

--- a/my_list.html
+++ b/my_list.html
@@ -1,5 +1,5 @@
-"Love will tear us apart"
-"Bela Lugosi's dead"
-"A forest"
-"Nine while nine"
-"Girlfriend in a coma"
+<li>"Love will tear us apart"</li>
+<li>"Bela Lugosi's dead"</li>
+<li>"A forest"</li>
+<li>"Nine while nine"</li>
+<li>"Girlfriend in a coma"</li>
